<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jinwook.jung.JinwookActivity">


    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:onClick="callIntent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/dominoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/domino"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"

        android:layout_marginTop="35dp" />

    <ImageView
        android:id="@+id/pizzaHutImageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pizzahut"
        android:scaleType="fitXY"
        android:layout_centerVertical="true"
         />

    <ImageView
        android:id="@+id/pizzaPizzaImageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pizzapizza"
        android:scaleType="fitXY"
        android:layout_above="@+id/nextButton"
        android:layout_alignParentStart="true" />



    <RadioGroup
        android:id="@+id/pizzaRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/dominoImageView"
        android:layout_toEndOf="@+id/pizzaPizzaImageView3"
        >

        <RadioButton
            android:id="@+id/dominoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/domino"
            style="@style/CustomFontStyle"
            android:layout_alignBottom="@+id/dominoImageView"
            android:layout_weight="1"

            />

        <RadioButton
            android:id="@+id/pizzaHutRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pizzaHut"
            android:layout_alignBottom="@+id/pizzaHutImageView2"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            style="@style/CustomFontStyle"
            android:textColor="#ff0000"

            />

        <RadioButton
            android:id="@+id/pizzapizzaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pizzaPizza"
            android:layout_alignBottom="@+id/pizzaPizzaImageView3"
            android:layout_alignEnd="@+id/nextButton"
            android:layout_weight="1"
            style="@style/CustomFontStyle"
            android:textColor="#ffa500"

            />

    </RadioGroup>


</RelativeLayout>
